tests/bad/structs/8.lat
class A
{
    int a;
}

int main() {
    A[] a = new A[2];

    printInt(a.a);
    return 0;
}